Adding router Params

--- a/src/app/country/country.component.html
+++ b/src/app/country/country.component.html
@@ -1,3 +1,8 @@
-<ul >
-  <li>{{countries.length}}</li>
-</ul>
+<div class="row">
+  <div class="col-md-5">
+    <bs-country-list></bs-country-list>
+  </div>
+  <div class="col-md-7">
+    <router-outlet></router-outlet>
+  </div>
+</div>
