--- a/src/app/bus/bus.component.html
+++ b/src/app/bus/bus.component.html
@@ -1,1 +1,9 @@
-<p>bus works!</p>
+<div class="row">
+
+  <div class="col-xs-12">
+
+    <ul class="list-group">
+      <bs-bus-start *ngFor="let bus of busFound; let i = index" [bus]="bus" [busId]="bus.id"></bs-bus-start>
+    </ul>
+  </div>
+</div>
