--- a/src/app/station/station-start.component.html
+++ b/src/app/station/station-start.component.html
@@ -6,5 +6,13 @@
 
 
 <hr>
-<router-outlet></router-outlet>
+<div class="row">
+  <div class="col-xs-12">
+    <ul class="list-group">
+      <bs-bus></bs-bus>
+    </ul>
+  </div>
+</div>
+
+
 
