--- a/src/app/station/station.component.html
+++ b/src/app/station/station.component.html
@@ -6,4 +6,7 @@
       <bs-station-start *ngFor="let station of stationFound; let i = index" [station]="station" [stationId]="station.id"></bs-station-start>
     </ul>
   </div>
+
+
 </div>
+<router-outlet></router-outlet>
