--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -9,7 +9,7 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Filter</a>
+        <a class="nav-link" href="filter">Filter</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Pricing</a>
