--- a/src/app/bus/bus.component.html
+++ b/src/app/bus/bus.component.html
@@ -1,9 +1,3 @@
-<div class="row">
 
-  <div class="col-xs-12">
+      <bs-bus-start *ngFor="let bus of busFound;" [bus]="bus" [busId]="bus.id"></bs-bus-start>
 
-    <ul class="list-group">
-      <bs-bus-start *ngFor="let bus of busFound; let i = index" [bus]="bus" [busId]="bus.id"></bs-bus-start>
-    </ul>
-  </div>
-</div>
