--- a/src/app/country/country-detail.component.html
+++ b/src/app/country/country-detail.component.html
@@ -1,21 +1,22 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="https://image.shutterstock.com/image-vector/bus-stop-city-background-vector-260nw-399735016.jpg"  height="170" width="450" alt="" class="img-responsive">
+    <img src="https://image.shutterstock.com/image-vector/bus-stop-city-background-vector-260nw-399735016.jpg"  style="height: 170px; width: 450px"  alt="" class="img-responsive">
   </div>
 </div>
+<br>
 <div class="row">
   <div class="col-xs-12">
-    <h1>{{selectedCountry?.name}}</h1>
+    <h2> Stations avaible in <strong>{{selectedCountry?.name}}</strong> : </h2>
   </div>
 
 </div>
 <hr>
 
 <div class="row">
-  <div class="col-xs-12">
+
     <ul class="list-group">
       <bs-station></bs-station>
     </ul>
-  </div>
+
 </div>
 
