--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,10 +1,11 @@
-<script src="bus-station.ts"></script>
 <div style="text-align: center">
-  <input type="text"  [(ngModel)]="saerchName"/>
-</div>
-<div style="text-align: center">
-  <h2 style="color: navy">Bus Station Filter</h2>
+  <h1 style="color: navy">Bus Station Filter</h1>
   <br/> </div>
+
+<div style="text-align: center">
+  <input class="form-control form-control-lg" type="text" placeholder="search here with country or station name" [(ngModel)]="saerchName">
+</div>
+<br><br>
 <div class="container">
   <table class="table table-striped">
     <thead>
