--- a/src/app/station/station-start.component.html
+++ b/src/app/station/station-start.component.html
@@ -1,18 +1,4 @@
-<a [routerLink]="[stationId]" class="list-group-item clearfix" routerLinkActive="active">
-  <div class="pull-left">
-    <h4 class="list-group-item-heading">{{station.name}}</h4>
-  </div>
-</a>
 
-
-<hr>
-<div class="row">
-  <div class="col-xs-12">
-    <ul class="list-group">
-      <bs-bus></bs-bus>
-    </ul>
-  </div>
-</div>
-
-
+<a [routerLink]="[stationId]" class="list-group-item list-group-item-action " routerLinkActive="active">
+  {{station.name}}</a>
 
