--- a/src/app/station/station.component.html
+++ b/src/app/station/station.component.html
@@ -1,12 +1,11 @@
+
+
 <div class="row">
+  <div class="col-md-10">
+    <bs-station-list></bs-station-list>
 
-  <div class="col-xs-12">
 
-    <ul class="list-group">
-      <bs-station-start *ngFor="let station of stationFound; let i = index" [station]="station" [stationId]="station.id"></bs-station-start>
-    </ul>
+  <router-outlet></router-outlet>
+
   </div>
-
-
 </div>
-<router-outlet></router-outlet>
