--- a/src/app/country/country-detail.component.html
+++ b/src/app/country/country-detail.component.html
@@ -13,10 +13,11 @@
 <hr>
 
 <div class="row">
-
+  <div class="col-xs-12">
     <ul class="list-group">
       <bs-station></bs-station>
     </ul>
+  </div>
 
 </div>
 
