--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -5,14 +5,14 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item " routerLinkActive="active">
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['country']">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="filter">Filter</a>
+        <a class="nav-link" routerLinkActive="active" [routerLink]="['filter']" >Filter</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" routerLinkActive="active" href="#">Pricing</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
