--- a/src/app/country/country-start.component.html
+++ b/src/app/country/country-start.component.html
@@ -1,5 +1,7 @@
 <a [routerLink]="[countryId]" class="list-group-item clearfix" routerLinkActive="active">
   <div class="pull-left">
-    <h4 class="list-group-item-heading">{{country.name}}</h4>
+    <h4 class="list-group-item-heading"> <svg color="white" width="0.7em" height="0.7em" viewBox="0 0 16 16" class="bi bi-circle-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <circle cx="8" cy="8" r="8"/>
+    </svg>  {{country.name}}</h4>
   </div>
 </a>
