--- a/src/app/station/station-start.component.html
+++ b/src/app/station/station-start.component.html
@@ -1,4 +1,5 @@
 
 <a [routerLink]="[stationId]" class="list-group-item list-group-item-action " routerLinkActive="active">
-  {{station.name}}</a>
+  {{station.name}}
+</a>
 
