--- a/src/app/FilterSearch/user/user.component.html
+++ b/src/app/FilterSearch/user/user.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <br/>
-  <h1>List of Users</h1>
+  <h1>List of Bus </h1>
   <hr/>
 
   <bs-search (groupFilters)="filters = $event"
