--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -12,11 +12,9 @@
         <a class="nav-link" routerLinkActive="active" [routerLink]="['filter']" >Filter</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" href="#">Pricing</a>
+        <a class="nav-link" routerLinkActive="active" href="#">Group Filter</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
+
     </ul>
   </div>
 </nav>
