--- a/src/app/bus/bus-start.component.html
+++ b/src/app/bus/bus-start.component.html
@@ -1,9 +1,9 @@
 
 
 <div class="row row-cols-1 row-cols-md-1"  >
-  <div class="col mb-4">
+  <div class="col mb-12">
     <div class="card">
-      <img src="{{bus.imagePath}}" class="card-img-top" alt="...">
+      <img src="{{bus.imagePath}}"  style="height: 185px; width: 400px" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><strong>  <svg  color="blue" width="1.5em" height="1em" viewBox="0 0 16 16" class="bi bi-cash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" d="M15 4H1v8h14V4zM1 3a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H1z"/>
